--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:20.0.1
     #build:
-      #context: ./keycloak
+    #context: ./keycloak
     ports:
       - 8080:8080
     networks:
@@ -14,7 +14,7 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
     volumes:
       - "./keycloak/realm.json:/opt/keycloak/data/import/realm.json:ro"
-    command: ["start-dev", "--import-realm"]
+    command: [ "start-dev", "--import-realm" ]
 
   envoy:
     build:
@@ -26,6 +26,17 @@ services:
 
   upstream:
     image: nginx
+    networks:
+      - demonet
+
+  oidc-test-client:
+    image: beryju/oidc-test-client
+    ports:
+      - 9009:9009
+    environment:
+      OIDC_CLIENT_ID: oidc-tester
+      OIDC_CLIENT_SECRET: 3nhYktR0LLTiPRD7Mit6331cC0h9DKgu
+      OIDC_PROVIDER: http://keycloak:8080/realms/demorealm
     networks:
       - demonet
 
