--- a/envoy/envoy.yaml
+++ b/envoy/envoy.yaml
@@ -23,41 +23,43 @@ static_resources:
                             prefix: "/simpleapp"
                           route:
                             cluster: simpleapp
+                            prefix_rewrite: "/"
                         - match:
-                            prefix: "/iodcapp"
+                            prefix: "/oidcapp"
                           route:
-                            cluster: iodcapp
+                            cluster: oidcapp
+                            prefix_rewrite: "/"
 
                 http_filters:
-                  - name: envoy.filters.http.oauth2
-                    typed_config:
-                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
-                      config:
-                        token_endpoint:
-                          cluster: keycloak
-                          uri: http://keycloak:8080/realms/demorealm/protocol/openid-connect/token
-                          timeout: 5s
-                        authorization_endpoint: http://localhost:8080/realms/demorealm/protocol/openid-connect/auth
-                        redirect_uri: "http://%REQ(:authority)%/oauth2/callback"
-                        redirect_path_matcher:
-                          path:
-                            exact: /oauth2/callback
-                        signout_path:
-                          path:
-                            exact: /oauth2/signout
-                        credentials:
-                          client_id: "democlient"
-                          token_secret:
-                            name: token
-                            sds_config:
-                              path: "/etc/envoy/token-secret.yaml"
-                          hmac_secret:
-                            name: hmac
-                            sds_config:
-                              path: "/etc/envoy/hmac-secret.yaml"
-                        forward_bearer_token: true
-                        auth_scopes:
-                          - openid
+                  # - name: envoy.filters.http.oauth2
+                  #   typed_config:
+                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
+                  #     config:
+                  #       token_endpoint:
+                  #         cluster: keycloak
+                  #         uri: http://localhost:10000/keycloak/realms/demorealm/protocol/openid-connect/token
+                  #         timeout: 5s
+                  #       authorization_endpoint: http://localhost:10000/keycloak/realms/demorealm/protocol/openid-connect/auth
+                  #       redirect_uri: "http://%REQ(:authority)%/oauth2/callback"
+                  #       redirect_path_matcher:
+                  #         path:
+                  #           exact: /oauth2/callback
+                  #       signout_path:
+                  #         path:
+                  #           exact: /oauth2/signout
+                  #       credentials:
+                  #         client_id: "democlient"
+                  #         token_secret:
+                  #           name: token
+                  #           sds_config:
+                  #             path: "/etc/envoy/token-secret.yaml"
+                  #         hmac_secret:
+                  #           name: hmac
+                  #           sds_config:
+                  #             path: "/etc/envoy/hmac-secret.yaml"
+                  #       forward_bearer_token: true
+                  #       auth_scopes:
+                  #         - openid
 
                   - name: envoy.filters.http.router
                     typed_config:
@@ -103,4 +105,4 @@ static_resources:
                   address:
                     socket_address:
                       address: oidcapp
-                      port_value: 9009
+                      port_value: 9000
